--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,44 @@
 body{
   font-family: "Montserrat";
+  text-align: center;
 }
-#title{
-  background-color: #ff4c68;
-  color: #fff;
-}
-.container-fluid{
-  padding: 3% 15% 7%;
 
+h1, h2, h3, h4, h5, h6{
+font-family: "Montserrat-Bold";
 }
-h1{
+
+p{
+  color: #8f8f8f;
+}
+
+/* Headings */
+.big-heading{
   font-family: "Montserrat-Black";
   font-size: 3.5rem;
   line-height: 1.5;
 }
-h2{
-  font-family: "Montserrat-Bold";
+
+.section-heading{
   font-size: 3rem;
   line-height: 1.5;
 }
-h3{
-  font-family: "Montserrat-Bold";
-  font-size: 1.5rem;
+/* containers */
+.container-fluid{
+  padding: 7% 15%;
 }
-p{
-  color: #8f8f8f;
+/* section  */
+
+.colored-section{
+  background-color: #ff4c68;
+  color: #fff;
+}
+.white-section{
+  background-color: #fff;
+}
+/* title section */
+#title .container-fluid{
+padding: 3% 15%;
+  text-align: left;
 }
 
 /* Navigation Bar */
@@ -42,7 +56,7 @@ p{
 }
 .nav-link{
   font-size: 1.2rem;
-  font-family: "Montserrat-light"
+  font-family: "Montserrat-light";
 }
 
 /* Download buttons */
@@ -60,13 +74,14 @@ p{
 
 /* Fuature Section */
 #features{
-  padding: 7% 15%;
-  background-color: #fff;
   position: relative;
 }
 
+.feature-title{
+  font-size: 1.5rem;
+}
+
 .feature-box{
-  text-align: center;
   padding: 5%;
 }
 
@@ -80,22 +95,22 @@ p{
 /* testimonial section */
 
 #testimonials {
-  padding: 7% 15%;
-  text-align: center;
   background-color: #ef8172;
-  color: #fff;
 }
+
+.testimonial-text{
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 .testimonial-image{
   width: 10%;
   border-radius: 100%;
   margin: 20px;
 }
-.carousel-item{
-  padding: 7% 15%;
-}
+
 #press{
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 3%;
 }
 .press-logo{
@@ -106,29 +121,19 @@ p{
 
 #pricing{
   padding: 100px;
-  text-align: center;
+}
+
+.price-text{
+  font-size: 3rem;
+  line-height: 1.5;
 }
 .pricing-column{
   padding: 3% 2%;
 }
 /* CTA section */
-#cta{
-  background-color: #ff4c68;
-  color: #fff;
-  padding: 7% 15%;
-  text-align: center;
-}
-.cta-heading{
-  font-family: "Montserrat-Black";
-  font-size: 3.5rem;
-  line-height: 1.5;
-}
+
 /* Footer section  */
 
-#footer{
-  padding: 7% 15%;
-  text-align: center;
-}
 .social-icon{
   margin: 20px 10px;
 }
